--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -28,3 +28,5 @@ $input-font-stack: proxima-nova, sans-serif;
 $layout-header-height: 64px;    // used in miltiple includes
 $layout-nav-width: 190px;       // used in miltiple include
 $line-height-default: 1.3em;
+
+@import 'text-styles';
