UIP-1543 Move newer SCSS files into folders and include as partials
Change-Id: I314e7c9930cfa349267fd289f47751cfac9aa187

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -3,6 +3,8 @@
 @import 'layout/edit-section';
 @import 'layout/policy-node';
 @import 'layout/stack';
+@import 'layout/header-bar';
+@import 'layout/view-toggle';
 
 $layout-header-height: 46px;
 $layout-nav-width: 190px;
