UIP-1545 Borderless inline messages
Change-Id: I5c8973b8997572b08eba7ac2b6f728a1f509072e

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -878,6 +878,21 @@ $color-grey-minor-1: $color-neutral-30;
             color: $color-active-blue;
         }
     }
+
+    &--borderless {
+        &,
+        &.warning,
+        &.notice,
+        &.error,
+        &.success {
+            border: none;
+            padding: 0 0 0 40px;
+    
+            &:before {
+                left: 0;
+            }
+        }
+    }
 }
 
 
