UIP-1546 : add a css class that will allow the user to resize the multi-drag columns (if a css class is added)
Change-Id: I460897c61351d0b66fe6ee800d10a473163f5a79

--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -92,6 +92,13 @@
         text-transform: uppercase;
         margin-right: $spacing-sm;
     }
+    &--resizable {
+        .items {
+            max-height: none !important;
+            height: 400px;
+            resize: vertical;
+        }
+    }
     .items {
         max-height: 400px;
         overflow: auto;
