UIP-1547 : fix button distortion when MultiDrag labels are long/wrap (caused by flexbox)
Change-Id: I843fd7b01c2c05b0a95a3af16d19e8905f13cc62

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -230,6 +230,7 @@ button,
             padding: 0;
             height: $size;
             width: $size;
+            min-width: $size;
             text-align: center;
             line-height: $size;
 
