UIP-1552 fixed textArea transition
Change-Id: I25c4116391394b505edbd024dd413b3206dedea8

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -60,7 +60,7 @@ textarea {
     font-family: $font-pn-regular;
 
     @include border-radius($default-input-border-radius);
-    @include transition($default-input-transition);
+    @include transition(border-color .3s);
 
     &:visited {
         border: 1px solid $color-input-fill;
