UIP-1554 PageGroup added tests
Change-Id: Ia0334a143a82cd039f4d728cc6f4eb81b7a06009

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -478,10 +478,11 @@ label {
     }
 
     &.parent {
-        font-family: $font-pn-bold;
+        color: $color-elephant;
+        font-family: $font-pn-semibold;
         display: block;
-        font-size: 14px;
-        margin: 0 0 10px;
+        font-size: 15px;
+        margin: 0 0 $spacing-sm;
     }
 
     &.inline-save {
