--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1052,6 +1052,10 @@ $color-grey-minor-1: $color-neutral-30;
     }
 }
 
+.page-group-content {
+    padding: $spacing-sm;
+}
+
 .page-section-content {
     margin: 0 0 40px 25px;
 }
