--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -881,6 +881,34 @@ $color-grey-minor-1: $color-neutral-30;
             color: $color-active-blue;
         }
     }
+    &--alternate {
+        &.warning,
+        &.error,
+        &.success,
+        &.notice {
+            color: $color-white;
+            padding-left: 15px;
+            border: none;
+            &:before {
+                content: none;
+            }
+        }
+        &.warning {
+            background-color: $color-warning-icon-yellow;
+        }
+        
+        &.error {
+            background-color: $color-critical-red;
+            
+            }
+        &.success {
+            background-color: $color-success;
+        
+            }
+        &.notice {
+            background-color: $color-active-blue;
+    }
+}
 
     &--borderless {
         &,
