UIP-1564 : add missing error states to the hero chart and stat card UIP-1565 : adjust hero chart x-axis label size based on the number of rendered bars UIP-1569 : surface the selected date range as a top-level prop on the HeroChart component UIP-1571 : fix StatCard showing as reversed in Safari (add webkit version of backface-visibility)
Change-Id: I342d075879b82c73944ca4ce6bd9270875d962eb

--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -162,6 +162,10 @@ a[class*=' icon-'] {
     content: '\67';
 }
 
+.icon-cogs:before {
+  content: "\e91c";
+}
+
 .icon-cog-filled:before {
     content: '\e919';
 }
