--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -411,6 +411,11 @@
     }
 }
 
+@mixin backface-visibility {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
 
 // DEPRECATED OR SITE-SPECIFIC --------------------------------------------------------------------
 
