--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -1,5 +1,6 @@
 .hero-chart {
     position: relative;
+    min-height: 504px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,56 +18,86 @@
         border-radius: 5px !important;
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
     }
-}
 
-.hero-chart__greeting {
-    color: $color-white;
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    text-transform: uppercase;
-    font-size: 18px;
-}
+    &__greeting {
+        color: $color-white;
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        text-transform: uppercase;
+        font-size: 18px;
+    }
 
-.hero-chart__center-text {
-	color: $color-white;
-	font-family: $font-pn-light;
-	margin: 0 0 15px 0;
-}
+    &__center-text {
+        color: $color-white;
+        font-family: $font-pn-light;
+        margin: 0 0 15px 0;
+    }
 
-.hero-chart__title {
-    text-transform: uppercase;
-    font-size: 18px;
-    line-height: 1em;
-}
+    &__title {
+        text-transform: uppercase;
+        font-size: 18px;
+        line-height: 1em;
+    }
 
-.hero-chart__total {
-    font-size: 55px;
-    line-height: 1em;
-    margin: 5px 0;
-    font-family: $font-pn-semibold;
-}
+    &__total {
+        font-size: 55px;
+        line-height: 1em;
+        margin: 5px 0;
+        font-family: $font-pn-semibold;
+    }
 
-.hero-chart__subtitle {
-    font-size: 16px;
-    line-height: 1em;
-}
+    &__subtitle {
+        font-size: 16px;
+        line-height: 1em;
+    }
 
-.hero-chart__top-chart,
-.hero-chart__bottom-chart {
-    path.recharts-rectangle {
-        fill-opacity: 0.6 !important;
-        &:hover {
-            fill-opacity: 1 !important;
+    &__error {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-70%);
+        text-align: center;
+        color: $color-white;
+    }
+
+    &__error-text {
+        font-size: 14px;
+        line-height: 1.3em;
+        max-width: 200px;
+    }
+
+    &__error-icon {
+        font-size: 70px;
+        margin: 0 0 $spacing-md;
+    }
+
+    &__top-chart,
+    &__bottom-chart {
+        path.recharts-rectangle {
+            fill-opacity: 0.6 !important;
+            &:hover {
+                fill-opacity: 1 !important;
+            }
         }
     }
+
+    &__bottom-chart {
+        .recharts-surface {
+            @include transform(scaleY(-1));
+        }
+    }
+
+    &__rocker {
+    margin: 25px 0 0;
 }
 
-.hero-chart__bottom-chart {
-    .recharts-surface {
-        @include transform(scaleY(-1));
+    &__stat-cards {
+        margin: -70px 0 0;
     }
 }
+
+
 
 .hero-tooltip {
     font-size: 14px;
@@ -76,10 +107,6 @@
 
 .hero-tooltip__bottom-value {
     color: #ffa500;
-}
-
-.hero-chart__rocker {
-    margin: 25px 0 0;
 }
 
 .rocker-button--chart-rocker {
@@ -152,8 +179,4 @@
             }
         }
     }
-}
-
-.hero-chart__stat-cards {
-    margin: -70px 0 0;
 }
