UIP-1570 Add stylelint to makefile, fix errors
Change-Id: I2f76e76fbe00fd74f8d480edb4f45bc4dedf2f89

--- a/packages/ui-library/src/css/forms/_keyword-search.scss
+++ b/packages/ui-library/src/css/forms/_keyword-search.scss
@@ -24,7 +24,8 @@
         display: block;
         padding: 0 $spacing-sm;
 
-        &--selected, &:hover {
+        &--selected,
+        &:hover {
             background-color: $color-strong-neutral-90;
             color: $color-slate;
             text-decoration: none;
