--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -91,7 +91,7 @@
                 color: $color-midnight;
             }
         }
-        [class^="icon"] {
+        [class^='icon'] {
             @include default-icon-styles;
         }
         .icon-help {
