--- a/packages/ui-library/src/css/icons.scss
+++ b/packages/ui-library/src/css/icons.scss
@@ -163,7 +163,7 @@ a[class*=' icon-'] {
 }
 
 .icon-cogs:before {
-  content: "\e91c";
+    content: '\e91c';
 }
 
 .icon-cog-filled:before {
@@ -319,7 +319,7 @@ a[class*=' icon-'] {
 }
 
 .icon-non-interactive:before {
-  content: '\e91a';
+    content: '\e91a';
 }
 
 .icon-notepad:before {
