--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -1,45 +1,45 @@
 
 @-webkit-keyframes rotation {
     0% {
-        @include transform(rotate(0deg));
+        @include transform(rotate(720deg));
     }
     100% {
-        @include transform(rotate(720deg));
+        @include transform(rotate(0deg));
     }
 }
 
 @-moz-keyframes rotation {
     0% {
-        @include transform(rotate(0deg));
+        @include transform(rotate(720deg));
     }
     100% {
-        @include transform(rotate(720deg));
+        @include transform(rotate(0deg));
     }
 }
 
 @-o-keyframes rotation {
     0% {
-        @include transform(rotate(0deg));
+        @include transform(rotate(720deg));
     }
     100% {
-        @include transform(rotate(720deg));
+        @include transform(rotate(0deg));
     }
 }
 
 @keyframes rotation {
     0% {
-        @include transform(rotate(0deg));
+        @include transform(rotate(720deg));
     }
     100% {
-        @include transform(rotate(720deg));
+        @include transform(rotate(0deg));
     }
 }
 
-@mixin loaderCss($loader-size) {
+@mixin loaderCss($loader-size, $border-width:3px) {
     width: $loader-size;
     height: $loader-size;
     display: inline-block;
-    border-width: 3px;
+    border-width: $border-width;
     border-style: solid;
 
     @include border-radius($loader-size);
@@ -82,6 +82,53 @@
         }
     }
 }
+
+.spinner__box{
+    text-align: center;
+    transform: translateX(-50%);
+    margin-left: 50%;
+    max-width: 310px;
+}
+
+.spinner__page {
+    $loader-size: 75px;
+    color: transparent;
+    border-color: $color-active-blue rgba($color-neutral-90, 0.4) rgba($color-neutral-90, 0.4) rgba($color-neutral-90, 0.4);
+    position: relative;
+    &::before,
+    &::after {
+        content:'';
+        height: 10px;
+        width: 10px;
+        border-radius: 5px;
+        position: absolute;
+        background-color:$color-active-blue;
+    }
+    &:before {
+        top: 1px;
+        left: 3px;
+        background-color: $color-active-blue;
+    }
+    &:after {
+        top: 1px;
+        left: 61px;
+        background-color:$color-active-blue;
+    }
+    @include loaderCss($loader-size, 10px);
+}
+
+.spinner__text {
+    margin-top: 15px;
+    padding: $spacing-sm $spacing-lg;
+    border-radius: 40px;
+    line-height: 1.2em;
+    font-size: 20px;
+    text-align: center;
+    color: $color-strong-neutral-10;
+    background-color: rgba($color-white, 0.6);
+}
+
+
 
 button.spinner {
     $loader-size: 9px;
