UIP-1575 fixed the one being grey
Change-Id: I160a9528b9b85385804b1ca4b7e879492acddcb4

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -855,6 +855,16 @@ input[type=file] {
                 .help-tooltip-target {
                     display: block;
                     padding: $option-padding;
+                    color: $color-midnight;
+                    &:hover,
+                    &.highlighted {
+                        background-color: $color-active-blue;
+                        color: $color-white;
+
+                        &:before {
+                            background-color: $color-white;
+                        }
+                    }
                 }
             }
         }
