Added muted text style

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -20,6 +20,7 @@ $color-neutral-30: #666;
 $color-neutral-40: #737373;
 $color-neutral-50: #808080;
 $color-neutral-60: #9a9a9a;
+$color-neutral-70: #b4b4b4;
 $color-neutral-90: #f8f8f8;
 
 $color-neutral-100: #fff;
