UIP-1580 : add min-height to stat card
Change-Id: Icaf78de448dabcc54be40de0e1c8f7b66825da3a

--- a/packages/ui-library/src/css/layout/_stat-cards.scss
+++ b/packages/ui-library/src/css/layout/_stat-cards.scss
@@ -61,7 +61,9 @@ $fullwidthBreakpoint: 950px;
         @include flexbox;
         @include flexbox-direction(column);
 
+        box-sizing: border-box;
         padding: $spacing-xl;
+        min-height: 220px;
 
         @media (max-width: $condensedBreakpoint) {
             padding: $spacing-xl $spacing-md;
