--- a/packages/ui-library/src/demo/css/demos.scss
+++ b/packages/ui-library/src/demo/css/demos.scss
@@ -17,6 +17,18 @@
     }
 }
 
+.hero-chart {
+    margin: 0;
+}
+.hero-chart__stat-cards .stat-card-row {
+    :nth-child(1) {
+        margin-left: 15px;
+    }
+    :nth-child(3) {
+        margin-right: 15px;
+    }
+}
+
 .instructions {
     font-style: italic;
     margin-bottom: 20px;
