UIP-1574 : add page spinner to the stat card add a smaller version of the page spinner per discussion with Natalie clean/homogonize the styling and animation of all spinners add css to keep support for hard-coded instances of the spinner (renamed component-based css to loader)
Change-Id: Ie6d3a3858c53560d79e457932109cf1e6e2f2498

--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -62,14 +62,6 @@
         color: $color-white;
     }
 
-    .spinner__box {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-70%);
-        margin: 0;
-    }
-
     &__error-text {
         font-size: 14px;
         line-height: 1.3em;
@@ -103,6 +95,14 @@
 
     &__stat-cards {
         margin: -70px 0 0;
+    }
+
+    .page-loader__box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-70%);
+        margin: 0;
     }
 }
 
