--- a/packages/ui-library/src/css/layout/_stat-cards.scss
+++ b/packages/ui-library/src/css/layout/_stat-cards.scss
@@ -223,6 +223,10 @@ $fullwidthBreakpoint: 950px;
         }
     }
 
+    &__loader {
+        margin-top: 20px;
+        margin-bottom: 25px;
+    }
 }
 
 .stat-card-row {
