--- a/packages/ui-library/src/demo/css/demos.scss
+++ b/packages/ui-library/src/demo/css/demos.scss
@@ -21,10 +21,10 @@
     margin: 0;
 }
 .hero-chart__stat-cards .stat-card-row {
-    :nth-child(1) {
+     > :nth-child(1) {
         margin-left: 15px;
     }
-    :nth-child(3) {
+     > :nth-child(3) {
         margin-right: 15px;
     }
 }
