UIP-1582: Set help hint icons to be dark blue on hover
Change-Id: I6114c3a699964cf24a4441611fe5f7ed18919229

--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -122,6 +122,9 @@
         vertical-align: baseline;
         cursor: pointer;
     }
+    &:hover [class^='icon-'] {
+        color: $color-accent-neutral-10;
+    }
     &.warning {
         .tooltip-text {
             @include bg-styles($color-critical-red);
