--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -232,10 +232,6 @@ $expandable-row-gap: 12px;
                 white-space: normal;
                 word-break: break-word;
             }
-
-            .item-message {
-                display: block;
-            }
         }
         &.no-edit {
             .edit-btn {
@@ -347,16 +343,20 @@ $expandable-row-gap: 12px;
             z-index: 100;
         }
         .item-message {
-            display: none;
-            padding: 15px 30px;
-            margin: 0 45px 10px 0;
-            font-size: 14px;
-            line-height: 1.3;
+            display: block;
             text-align: center;
-            color: $color-white;
+            margin: -15px 0 15px 0;
+            padding: 10px 25px;
 
-            &.warning {
-                background: $color-warning-icon-yellow;
+            .inline-message-text {
+                display: block;
+            }
+        }
+        .item-message__buttons {
+            margin-left: 25px;
+
+            > .button {
+                margin-right: 10px;
             }
         }
     }
