UIP-1586 : fix code view styling
Change-Id: I3b5c8c68597acdaf6efdb3236147cb3135c79116

--- a/packages/ui-library/src/css/code-view.scss
+++ b/packages/ui-library/src/css/code-view.scss
@@ -1,9 +1,10 @@
 .code-view {
+    padding: $spacing-md;
     max-height: 400px;
     overflow: scroll;
     color: $color-midnight;
-    background-color: $color-input-fill;
-    border-color: $color-input-fill;
+    background-color: rgba($color-input-fill, 0.25);
+    border: 1px solid $color-neutral-70;
 }
 
 .code-view__font {
