UIP-1590 Build components to support callout box for data
Change-Id: Id3a2a3515acf7d2c7aa0c1fd233d4d754c582660

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -8,6 +8,7 @@
 @import 'layout/label-value-pairs';
 @import 'templates/_expandable-row-tooltip.scss';
 @import 'templates/_section-columns';
+@import 'layout/callout-box';
 
 $layout-header-height: 46px;
 $layout-nav-width: 190px;
@@ -1222,16 +1223,28 @@ $color-grey-minor-1: $color-neutral-30;
 .hr {
     border: 1px dashed $color-rabbit-fur;
     margin: 25px 0;
-    height: 0;
+    height: 1px;
     border-width: 1px 0 0;
-}
 
-.hr--sm {
-    margin: $spacing-sm 0;
-}
+    &--zero {
+        margin: 0;
+    }
 
-.hr--md {
-    margin: $spacing-md 0;
+    &--xs {
+        margin: $spacing-xs 0;
+    }
+
+    &--sm {
+        margin: $spacing-sm 0;
+    }
+
+    &--md {
+        margin: $spacing-md 0;
+    }
+
+    &--solid {
+        border-style: solid;
+    }
 }
 
 // flakey but one of only a few options : use with caution
