UIP-1369 Made custom edit for expandable row more flexible
Change-Id: I7ab82ce94fceca568ffd3338a201231548570122

--- a/packages/ui-library/src/css/result-sets.scss
+++ b/packages/ui-library/src/css/result-sets.scss
@@ -387,6 +387,25 @@ $expandable-row-gap: 12px;
     }
 }
 
+.edit-btn {
+    // these rules handle the case when a DetailsTooltip is used for the edit button
+    > * {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+
+    &:after {
+        z-index: 1;
+    }
+
+    a {
+        z-index: 2;
+    }
+}
+
 .row-help {
     display: inline-block;
     margin: 0;
